Remove use of deprecated for removal constructor