@@ -19,7 +19,7 @@ public class JavaOptimizer {
         if (object instanceof CharSequence)
             return cache != null ? cache.get((CharSequence) object) : new StringBuilder().append(object).toString();
         if (object instanceof Double)
-            return cache != null ? cache.get(((Double) object)) : new Double((Double) object);
+            return cache != null ? cache.get(((Double) object)) : Double.valueOf((Double) object);
         if (object instanceof List<?>)
             return optimizeList((Iterable<?>) object);
         if (object instanceof Map<?, ?>)
